fix dealer name overflow, add dual functions for financing boxes

--- a/assets/css/sqms-product-selector.css
+++ b/assets/css/sqms-product-selector.css
@@ -10,6 +10,9 @@
 	width: auto;
 }
 
+.gform_wrapper .sqms-prod-sel-form li.gfield.gf_list_3col ul.gfield_radio li label {
+	white-space: normal;
+}
 .gform_wrapper .sqms-prod-sel-form .gfield_radio li {
 	margin-bottom: 18px;
 }
